alteramos nuestra hoja de estilos

--- a/index.html
+++ b/index.html
@@ -63,7 +63,75 @@
         </section>
     </main>
 
-    <section>
+    <section class="grid-container">
+        <h1>Artist</h1>
+        <div class="artist">
+            <div class="filas">
+                <img  src="img/lali.jpg">
+                <img  src="img/shawn.jpg" >
+                <img  src="img/abel-pintos.jpg" >
+                <img  src="img/ariana.jpg" >
+                <img  src="img/ed-sheeran.jpg" >
+                <img  src="img/laura-marano.jpg" >
+            </div>
+            <div class="filas">
+                <img  src="img/miley.cyrus.jpg" >
+                <img  src="img/francesco-parrino.jpg">
+                <img  src="img/ross-linch.jpg" >
+                <img  src="img/justin.jpg" >
+                <img  src="img/axel.jpg">
+                <img  src="img/sabrina-carpenter.jpg">
+            </div>
+        </div>
+        
+        <h1>Albums</h1>
+        <div class="albums">
+            <div class="one-direction">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6cunQQ7YZisYOoiFu2ywIq?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+            <div class="twice">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5K50GHH7OqxKavKoYb7aJm?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+            <div class="carpenter">
+                <iframe  style="border-radius:12px" src="https://open.spotify.com/embed/album/55huyEjfSVsk9nnmmKp5df?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+            <div class="r5">
+                <iframe  style="border-radius:12px" src="https://open.spotify.com/embed/album/4lzeutaiLSyo7ROvG2Hcdj?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+
+        <h1>Podcast</h1>
+        <div class="podcast">
+            <div class="ids">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/3evF5thxuPAxVXsQI32nRx?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+            <div class="itiel">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/7m7kDZMMyoym9HWj26uboL?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+            <div class="agape">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/3lKs9D5qGucPlNMaGsxVBd?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+            <div class="alex">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/2iU3y9MJhZOsdS7evqsmLp?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+
+        <h1>Mix</h1>
+        <div class="mix">
+            <div class="daily-mix-1">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E39AJKUtp6ULn?utm_source=generator" width="300" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+            <div class="daily-mix-2">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E36ORsEVal5fW?utm_source=generator" width="300" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+            <div class="daily-mix-3">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2tWsGlCpi3L9nmQPjRwBKm?utm_source=generator" width="300" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+</section>
+
+    
+    <!--<section>
         <div class="artistas">
             <h1>Artist</h1>
             <div class="artist">
@@ -124,9 +192,9 @@
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2tWsGlCpi3L9nmQPjRwBKm?utm_source=generator" width="300" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
         </div>
-    </section>
+    </section>-->
 
-    <footer class="container-fluid text-light">
+    <!--<footer class="container-fluid text-light">
         <div class="row p-5 bg-secondary">
             <div class="col-xs-12 col-md-6 col-lg-3">
                 <img src="img/logo-penta-music.png" alt="">
@@ -143,7 +211,7 @@
                 <img src="img/face.png" alt="">
             </div>
         </div>
-    </footer>
+    </footer>-->
 
 
 
