--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Un lugar donde encontrarás las mejores bandas y artistas del momento">
+    <meta name="keywords" content="MUSICA, ALBUMS, BANDAS, ARTISTAS">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>PentaMusic</title>
+    <title>PentaMusic-inicio</title>
 </head>
 <body class="bg-dark container-fluid">
     <header>
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html"><img src="img/logo-penta-music.png" ></a>
+                    <a class="navbar-brand" href="index.html"><img src="img/logo-penta-music.png" alt="imagen-del-logo" ></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
@@ -41,6 +43,11 @@
                 </nav>
         </div>
     </header>
+
+    <section>
+        <h1>TU MÚSICA, TU LUGAR</h1>
+        <img class="img" src="img/img-concierto.png" alt="fondo-de-concierto">
+    </section>
     <main class="container">
         <section>
             <div class="row mt-5">
@@ -61,24 +68,22 @@
         </section>
     </main>
     <section>
-        <div>
-            <h1>Artist</h1>
+            <h2 class="h2">Artist</h2>
                 <div class="grid-artist"> 
-                    <img class="artist" src="img/lali.jpg">
-                    <img class="artist" src="img/shawn.jpg" >
-                    <img class="artist" src="img/abel-pintos.jpg" >
-                    <img class="artist" src="img/ariana.jpg" >
-                    <img class="artist" src="img/ed-sheeran.jpg" >
-                    <img class="artist" src="img/laura-marano.jpg" >
-                    <img class="artist" src="img/miley.cyrus.jpg" >
-                    <img class="artist" src="img/francesco-parrino.jpg">
-                    <img class="artist" src="img/ross-linch.jpg" >
-                    <img class="artist" src="img/justin.jpg" >
-                    <img class="artist" src="img/axel.jpg">
-                    <img class="artist" src="img/sabrina-carpenter.jpg">
-            </div>
-        </div>
-        <h1>Albums</h1>
+                    <img class="artist" src="img/lali.jpg" alt="img-de-lali-esposito">
+                    <img class="artist" src="img/shawn.jpg" alt="img-de-shawn-mendes" >
+                    <img class="artist" src="img/abel-pintos.jpg"  alt="img-de-abel-pintos">
+                    <img class="artist" src="img/ariana.jpg" alt="img-de-ariana-grande" >
+                    <img class="artist" src="img/ed-sheeran.jpg"  alt="img-de-ed-sheeran">
+                    <img class="artist" src="img/laura-marano.jpg" alt="img-de-laura-marano" >
+                    <img class="artist" src="img/miley.cyrus.jpg" alt="img-de-miley-cyrus" >
+                    <img class="artist" src="img/francesco-parrino.jpg" alt="img-de-francesco-parrino">
+                    <img class="artist" src="img/ross-linch.jpg" alt="img-de-ross-linch" >
+                    <img class="artist" src="img/justin.jpg" alt="img-de--justin-bieber" >
+                    <img class="artist" src="img/axel.jpg" alt="img-de-axel">
+                    <img class="artist" src="img/sabrina-carpenter.jpg" alt="img-de-sabrina-carpenter">
+                </div>
+        <h2 class="h2">Albums</h2>
         <div class="grid-albums">
             <div class="one-direction">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6cunQQ7YZisYOoiFu2ywIq?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
@@ -94,7 +99,7 @@
             </div>
         </div>
 
-        <h1>Podcast</h1>
+        <h2 class="h2">Podcast</h2>
         <div class="grid-podcast">
             <div class="ids">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/5XZmXTd8RPIdobfjMGrksu?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
@@ -110,7 +115,7 @@
             </div>
         </div>
 
-        <h1>Mix</h1>
+        <h2 class="h2">Mix</h2>
         <div class="grid-mix">
             <div class="daily-mix-1">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E39AJKUtp6ULn?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
@@ -136,7 +141,7 @@
     <footer class="container-fluid text-light">
         <div class="row p-5 bg-secondary">
             <div class="col-xs-12 col-md-6 col-lg-3">
-                <img src="img/logo-penta-music.png" alt="">
+                <img src="img/logo-penta-music.png" alt="imagen-del-logo">
             </div>
             <div class="col-xs-12 col-md-6 col-lg-3">
             </div>
@@ -144,10 +149,10 @@
                 <p class="h5">Seguinos en Redes</p>
             </div>
             <div class="col-xs-12 col-md-6 col-lg-3">
-                <img src="img/twiter.png" alt="">
-                <img src="img/instagram.png" alt="">
-                <img src="img/whatsapp.png" alt="">
-                <img src="img/face.png" alt="">
+                <img src="img/twiter.png" alt="logo-de-twiter">
+                <img src="img/instagram.png" alt="logo-de-insta">
+                <img src="img/whatsapp.png" alt="logo-de-whatsapp">
+                <img src="img/face.png" alt="logo-de-face">
             </div>
         </div>
     </footer>
