--- a/pages/about.html
+++ b/pages/about.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="¿Querés conocernos mejor?">
+    <meta name="keywords" content="CONOCENOS, NOSOTROS, COMUNIDAD">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>About</title>
+    <title>About-Us</title>
 </head>
 
 <body class="bg-dark">
@@ -15,7 +17,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="../index.html"><img src="../img/logo-penta-music.png" ></a>
+                        <a class="navbar-brand" href="../index.html"><img src="../img/logo-penta-music.png" alt="imagen-del-logo" ></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                         </button>
@@ -46,7 +48,7 @@
         <main class="container">
             <section class="row my-5">
                 <div class="col-md-6">
-                    <img src="../img/quienes-somos.jpg" alt="img" class="img-fluid" >
+                    <img src="../img/quienes-somos.jpg" alt="imagen-nosotros" class="img-fluid" >
                 </div>
                 <div class="col-md-6 text-white">
                     <h1 class="h1">About Us</h1>
@@ -65,7 +67,7 @@
     <footer class="container-fluid text-light">
         <div class="row p-5 bg-secondary">
             <div class="col-xs-12 col-md-6 col-lg-3">
-                <img src="../img/logo-penta-music.png" alt="">
+                <img src="../img/logo-penta-music.png" alt="imagen-del-logo">
             </div>
             <div class="col-xs-12 col-md-6 col-lg-3">
             </div>
@@ -73,10 +75,10 @@
                 <p class="h5">Seguinos en Redes</p>
             </div>
             <div class="col-xs-12 col-md-6 col-lg-3">
-                <img src="../img/twiter.png" alt="">
-                <img src="../img/instagram.png" alt="">
-                <img src="../img/whatsapp.png" alt="">
-                <img src="../img/face.png" alt="">
+                <img src="../img/twiter.png" alt="logo-de-twiter">
+                <img src="../img/instagram.png" alt="logo-de-insta">
+                <img src="../img/whatsapp.png" alt="logo-de-whatsapp">
+                <img src="../img/face.png" alt="logo-de-face">
             </div>
         </div>
     </footer>
