--- a/pages/shop.html
+++ b/pages/shop.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tienda de música. Instrumentos de primera calidad">
+    <meta name="keywords" content="SHOP, ONLINE, INSTRUMENTOS, CALIDAD">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>About</title>
+    <title>Shop-Online</title>
 </head>
 
 <body class="bg-dark">
@@ -15,7 +17,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="../index.html"><img src="../img/logo-penta-music.png" ></a>
+                        <a class="navbar-brand" href="../index.html"><img src="../img/logo-penta-music.png"alt="imagen-del-logo" ></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                         </button>
@@ -48,35 +50,35 @@
         <h1>Shop Online</h1>
         <main class="grid-caja-shop">
             <div class="grid-shop">
-                <img class="instrumentos" src="../img/chello.jpg" alt="chello">
+                <img class="instrumentos" src="../img/chello.jpg" alt="imagen-de-chello">
                 <button type="button" class="btn btn-info">+</button>
             </div>
             <div class="grid-shop">
-                <img class="instrumentos" src="../img/flauta-traversa.jpg" alt="flauta-traversa">
+                <img class="instrumentos" src="../img/flauta-traversa.jpg" alt="imagen-de-flauta-traversa">
                 <button type="button" class="btn btn-info">+</button>
             </div>
             <div class="grid-shop">
-                <img class="instrumentos" src="../img/guitarra.jpg" alt="guitarra">
+                <img class="instrumentos" src="../img/guitarra.jpg" alt="imagen-de-guitarra">
                 <button type="button" class="btn btn-info">+</button>
             </div>
             <div class="grid-shop">
-                <img class="instrumentos" src="../img/piano.jpg" alt="piano">
+                <img class="instrumentos" src="../img/piano.jpg" alt="imagen-de-piano">
                 <button type="button" class="btn btn-info">+</button>
             </div>
             <div class="grid-shop">
-                <img class="instrumentos" src="../img/bateria.webp" alt="bateria">
+                <img class="instrumentos" src="../img/bateria.webp" alt="imagen-de-bateria">
                 <button type="button" class="btn btn-info">+</button>
             </div>
             <div class="grid-shop">
-                <img class="instrumentos" src="../img/saxo.jpg" alt="saxo">
+                <img class="instrumentos" src="../img/saxo.jpg" alt="imagen-de-saxo">
                 <button type="button" class="btn btn-info">+</button>
             </div>
             <div class="grid-shop">
-                <img class="instrumentos" src="../img/mic.jpg" alt="mic">
+                <img class="instrumentos" src="../img/mic.jpg" alt="imagen-de-micrófono">
                 <button type="button" class="btn btn-info">+</button>
             </div>
             <div class="grid-shop">
-                <img class="instrumentos" src="../img/violin.jpg" alt="violin">
+                <img class="instrumentos" src="../img/violin.jpg" alt="imagen-de-violin">
                 <button type="button" class="btn btn-info">+</button>
             </div>
         </main>
@@ -89,7 +91,7 @@
         <footer class="container-fluid text-light">
             <div class="row p-5 bg-secondary">
                 <div class="col-xs-12 col-md-6 col-lg-3">
-                    <img src="../img/logo-penta-music.png" alt="">
+                    <img src="../img/logo-penta-music.png" alt="imagen-del-logo">
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
                 </div>
@@ -97,10 +99,10 @@
                     <p class="h5">Seguinos en Redes</p>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
-                    <img src="../img/twiter.png" alt="">
-                    <img src="../img/instagram.png" alt="">
-                    <img src="../img/whatsapp.png" alt="">
-                    <img src="../img/face.png" alt="">
+                    <img src="../img/twiter.png" alt="logo-de-twiter">
+                    <img src="../img/instagram.png" alt="logo-de-insta">
+                    <img src="../img/whatsapp.png" alt="logo-de-whatsapp">
+                    <img src="../img/face.png" alt="logo-de-face">
                 </div>
             </div>
         </footer>
