--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="¿Querés conocernos mejor?">
-    <meta name="keywords" content="CONOCENOS, NOSOTROS, COMUNIDAD">
+    <meta name="keywords" content="MUSICA, ALBUMS, BANDAS, ARTISTAS">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>About-Us</title>
@@ -51,7 +51,7 @@
                     <img src="../img/quienes-somos.jpg" alt="imagen-nosotros" class="img-fluid" >
                 </div>
                 <div class="col-md-6 text-white">
-                    <h1 class="h1">About Us</h1>
+                    <h1 >About Us</h1>
                     <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eveniet aut libero tenetur non nihil iste quia doloribus saepe iure quibusdam eaque veritatis fugit aliquid alias porro fuga odit tempore perspiciatis blanditiis aliquam cupiditate hic, dolores pariatur. Nihil adipisci odit corrupti, ab doloribus ex a sit error ipsa, quibusdam molestias.</p>
                     <p class="texto">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque, atque? Ad quia quo minima eum exercitationem eveniet illo assumenda, veniam delectus odio numquam totam corrupti repellat dolorum dolores ratione ex deserunt? Delectus, assumenda, vel sint sed quisquam, itaque eveniet commodi hic explicabo cumque obcaecati dolor? Velit dicta ad, vel hic voluptates inventore veniam voluptatibus esse rem nihil repudiandae natus eum quisquam repellat accusamus delectus tempora vitae ex facere aliquid obcaecati.
