--- a/pages/playlist.html
+++ b/pages/playlist.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Accede a listas de reproducción con tus canciones favoritas">
-    <meta name="keywords" content="LISTAS, MÚSICA, REPRODUCCIÓN, BANDAS">
+    <meta name="keywords" content="MUSICA, ALBUMS, BANDAS, ARTISTAS">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Penta-Playlist</title>
@@ -47,7 +47,7 @@
         </header>
 
 
-        <h1>Playlist</h1>
+        <h1 >Playlist</h1>
 
         <main class="container-playlist" >
             <div class="grid-playlist">
