--- a/pages/shop.html
+++ b/pages/shop.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tienda de música. Instrumentos de primera calidad">
-    <meta name="keywords" content="SHOP, ONLINE, INSTRUMENTOS, CALIDAD">
+    <meta name="keywords" content="MUSICA, ALBUMS, BANDAS, ARTISTAS">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Shop-Online</title>
