hicimos ajustes al sitio

--- a/pages/about.html
+++ b/pages/about.html
@@ -24,16 +24,19 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../pages/about.html">About</a>
+                                <a class="nav-link active a:hover" aria-current="page" href="../pages/home.html">Home</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link active" href="../pages/login.html">Login</a>
+                                <a class="nav-link active" aria-current="page" href="../pages/about.html">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="../pages/login.html">Login</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="../pages/playlist.html">Playlist</a>
-                                </li>
+                            </li>
                             <li class="nav-item">
-                            <a class="nav-link active" href="../pages/shop.html">Shop</a>
+                                <a class="nav-link active" href="../pages/shop.html">Shop</a>
                             </li>
                         </ul>
                         <form class="d-flex">
@@ -51,7 +54,7 @@
                     <img src="../img/quienes-somos.jpg" alt="imagen-nosotros" class="img-fluid" >
                 </div>
                 <div class="col-md-6 text-white">
-                    <h1 >About Us</h1>
+                    <h1 class="h1" >About Us</h1>
                     <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eveniet aut libero tenetur non nihil iste quia doloribus saepe iure quibusdam eaque veritatis fugit aliquid alias porro fuga odit tempore perspiciatis blanditiis aliquam cupiditate hic, dolores pariatur. Nihil adipisci odit corrupti, ab doloribus ex a sit error ipsa, quibusdam molestias.</p>
                     <p class="texto">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque, atque? Ad quia quo minima eum exercitationem eveniet illo assumenda, veniam delectus odio numquam totam corrupti repellat dolorum dolores ratione ex deserunt? Delectus, assumenda, vel sint sed quisquam, itaque eveniet commodi hic explicabo cumque obcaecati dolor? Velit dicta ad, vel hic voluptates inventore veniam voluptatibus esse rem nihil repudiandae natus eum quisquam repellat accusamus delectus tempora vitae ex facere aliquid obcaecati.
