--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                        <a class="nav-link active a:hover" aria-current="page" href="pages/about.html">About</a>
+                            <a class="nav-link active a:hover" aria-current="page" href="pages/home.html">Home</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link active a:hover" href="pages/login.html">Login</a>
+                            <a class="nav-link active a:hover" aria-current="page" href="pages/about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active a:hover" href="pages/login.html">Login</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active a:hover" href="pages/playlist.html">Playlist</a>
-                            </li>
+                        </li>
                         <li class="nav-item">
-                        <a class="nav-link active a:hover" href="pages/shop.html">Shop</a>
+                            <a class="nav-link active a:hover" href="pages/shop.html">Shop</a>
                         </li>
                     </ul>
                     <form class="d-flex">
@@ -44,99 +47,22 @@
         </div>
     </header>
 
-    <section>
-        <h1>TU MÚSICA, TU LUGAR</h1>
-        <img class="img" src="img/img-concierto.png" alt="fondo-de-concierto">
-    </section>
-    <main class="container">
-        <section>
-            <div class="row mt-5">
-                <div class="col-lg-8">
-                    <div class="ratio ratio-16x9">
-                        <iframe width="1060" height="515" src="https://www.youtube.com/embed/E0wW9RwpG7M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6kZ42qRrzov54LcAk4onW9?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/12gXA8pXYzj9bycyyKSGAa?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/50hKgGCCf0V91o5DCw6dUR?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/1DpZ3jGqyRCTQ8Eoas1MP4?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/2Zp8p8ZO12s6ThkT5DCJrb?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3T4tUhGYeRNVUGevb0wThu?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                </div>
-            </div>
-        </section>
-    </main>
-    <section>
-            <h2 class="h2">Artist</h2>
-                <div class="grid-artist"> 
-                    <img class="artist" src="img/lali.jpg" alt="img-de-lali-esposito">
-                    <img class="artist" src="img/shawn.jpg" alt="img-de-shawn-mendes" >
-                    <img class="artist" src="img/abel-pintos.jpg"  alt="img-de-abel-pintos">
-                    <img class="artist" src="img/ariana.jpg" alt="img-de-ariana-grande" >
-                    <img class="artist" src="img/ed-sheeran.jpg"  alt="img-de-ed-sheeran">
-                    <img class="artist" src="img/laura-marano.jpg" alt="img-de-laura-marano" >
-                    <img class="artist" src="img/miley.cyrus.jpg" alt="img-de-miley-cyrus" >
-                    <img class="artist" src="img/francesco-parrino.jpg" alt="img-de-francesco-parrino">
-                    <img class="artist" src="img/ross-linch.jpg" alt="img-de-ross-linch" >
-                    <img class="artist" src="img/justin.jpg" alt="img-de--justin-bieber" >
-                    <img class="artist" src="img/axel.jpg" alt="img-de-axel">
-                    <img class="artist" src="img/sabrina-carpenter.jpg" alt="img-de-sabrina-carpenter">
-                </div>
-        <h2 class="h2">Albums</h2>
-        <div class="grid-albums">
-            <div class="one-direction">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6cunQQ7YZisYOoiFu2ywIq?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="twice">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5K50GHH7OqxKavKoYb7aJm?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="carpenter">
-                <iframe  style="border-radius:12px" src="https://open.spotify.com/embed/album/55huyEjfSVsk9nnmmKp5df?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="r5">
-                <iframe  style="border-radius:12px" src="https://open.spotify.com/embed/album/4lzeutaiLSyo7ROvG2Hcdj?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-        </div>
 
-        <h2 class="h2">Podcast</h2>
-        <div class="grid-podcast">
-            <div class="ids">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/5XZmXTd8RPIdobfjMGrksu?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="itiel">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/7m7kDZMMyoym9HWj26uboL?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="agape">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/3lKs9D5qGucPlNMaGsxVBd?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="alex">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/2iU3y9MJhZOsdS7evqsmLp?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-        </div>
 
-        <h2 class="h2">Mix</h2>
-        <div class="grid-mix">
-            <div class="daily-mix-1">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E39AJKUtp6ULn?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="daily-mix-2">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E36ORsEVal5fW?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="daily-mix-3">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2tWsGlCpi3L9nmQPjRwBKm?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="mix-country">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EQmPV0vrce2QZ?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="mix-pop">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EQncLwOalG3K7?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-            <div class="mix-latino">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EIV9Bo4q1Athv?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
-        </div>
-    </section>
+    <div>
+
+        <img class="imagen-fondo" src="img/img-concierto.png" alt="fondo-concierto">
+    </div>
+
+
+
+
+
+
+
+
+
+
 
     <footer class="container-fluid text-light">
         <div class="row p-5 bg-secondary">
