--- a/pages/login.html
+++ b/pages/login.html
@@ -24,16 +24,19 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../pages/about.html">About</a>
+                                <a class="nav-link active a:hover" aria-current="page" href="../pages/home.html">Home</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link active" href="../pages/login.html">Login</a>
+                                <a class="nav-link active" aria-current="page" href="../pages/about.html">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="../pages/login.html">Login</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="../pages/playlist.html">Playlist</a>
                                 </li>
                             <li class="nav-item">
-                            <a class="nav-link active" href="../pages/shop.html">Shop</a>
+                                <a class="nav-link active" href="../pages/shop.html">Shop</a>
                             </li>
                         </ul>
                         <form class="d-flex">
@@ -49,7 +52,7 @@
 
         <main>
             <form class="my-5 box" action="login.html" method="post">
-                <h1>Login</h1>
+                <h1 class="h1">Login</h1>
                 <input type="text" name="" placeholder="Username">
                 <input type="password" name="" placeholder="Password">
                 <input type="submit" name="" placeholder="Login">
