--- a/pages/shop.html
+++ b/pages/shop.html
@@ -24,16 +24,19 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../pages/about.html">About</a>
+                                <a class="nav-link active a:hover" aria-current="page" href="../pages/home.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../pages/about.html">About</a>
                             </li>
                             <li class="nav-item">
                             <a class="nav-link active" href="../pages/login.html">Login</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="../pages/playlist.html">Playlist</a>
-                                </li>
+                            </li>
                             <li class="nav-item">
-                            <a class="nav-link active" href="../pages/shop.html">Shop</a>
+                                <a class="nav-link active" href="../pages/shop.html">Shop</a>
                             </li>
                         </ul>
                         <form class="d-flex">
@@ -47,7 +50,7 @@
         </header>
 
 
-        <h1>Shop Online</h1>
+        <h1  class="h1">Shop Online</h1>
         <main class="grid-caja-shop">
             <div class="grid-shop">
                 <img class="instrumentos" src="../img/chello.jpg" alt="imagen-de-chello">
