mejoramos el responsive y modificamos el login y el about

--- a/pages/about.html
+++ b/pages/about.html
@@ -42,24 +42,25 @@
                         </ul>
                         <form class="d-flex">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
+                            <button class="search btn btn-outline-success" type="submit">Search</button>
                         </form>
                         </div>
                     </div>
                     </nav>
             </div>
         </header>
-        <main class="container">
-            <section class="row my-5">
-                <div class="col-md-6">
-                    <img src="../img/quienes-somos.jpg" alt="imagen-nosotros" class="img-fluid" >
-                </div>
-                <div class="col-md-6 text-white">
-                    <h1 class="h1" >About Us</h1>
-                    <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eveniet aut libero tenetur non nihil iste quia doloribus saepe iure quibusdam eaque veritatis fugit aliquid alias porro fuga odit tempore perspiciatis blanditiis aliquam cupiditate hic, dolores pariatur. Nihil adipisci odit corrupti, ab doloribus ex a sit error ipsa, quibusdam molestias.</p>
-                    <p class="texto">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque, atque? Ad quia quo minima eum exercitationem eveniet illo assumenda, veniam delectus odio numquam totam corrupti repellat dolorum dolores ratione ex deserunt? Delectus, assumenda, vel sint sed quisquam, itaque eveniet commodi hic explicabo cumque obcaecati dolor? Velit dicta ad, vel hic voluptates inventore veniam voluptatibus esse rem nihil repudiandae natus eum quisquam repellat accusamus delectus tempora vitae ex facere aliquid obcaecati.
-                    </p>
+
+        <main>
+            <section class="about">
+                <div class="content">
+                    <img src="../img/quienes-somos.jpg" alt="foto-about-us">
+                    <div class="text">
+                        <h1 class="titulo">About Us</h1>
+                        <p>Somos un equipo apasionado por la música que busca generar un espacio donde bandas y artistas que están dando sus primeros pasos en la música se den a conocer.
+                        En este sitio podrás encontrar buena música, charlas reflexivas, y videos de todo tipo. Tu mejor companía en todo momento y en todo lugar.
+                        </p>
+                        <button class="know-more btn btn-outline-success" type="submit">Know more</button>
+                    </div>
                 </div>
             </section>
         </main>
