--- a/pages/home.html
+++ b/pages/home.html
@@ -40,7 +40,7 @@
                     </ul>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <button class="search btn btn-outline-success" type="submit">Search</button>
                     </form>
                     </div>
                 </div>
@@ -67,78 +67,78 @@
             </div>
         </section>
     </main>
-    <section>
-            <h1>Artists</h1>
-                <div class="grid-artist"> 
-                    <img class="artist" src="../img/lali.jpg" alt="img-de-lali-esposito">
-                    <img class="artist" src="../img/shawn.jpg" alt="img-de-shawn-mendes" >
-                    <img class="artist" src="../img/abel-pintos.jpg"  alt="img-de-abel-pintos">
-                    <img class="artist" src="../img/ariana.jpg" alt="img-de-ariana-grande" >
-                    <img class="artist" src="../img/ed-sheeran.jpg"  alt="img-de-ed-sheeran">
-                    <img class="artist" src="../img/laura-marano.jpg" alt="img-de-laura-marano" >
-                    <img class="artist" src="../img/miley.cyrus.jpg" alt="img-de-miley-cyrus" >
-                    <img class="artist" src="../img/francesco-parrino.jpg" alt="img-de-francesco-parrino">
-                    <img class="artist" src="../img/ross-linch.jpg" alt="img-de-ross-linch" >
-                    <img class="artist" src="../img/justin.jpg" alt="img-de--justin-bieber" >
-                    <img class="artist" src="../img/axel.jpg" alt="img-de-axel">
-                    <img class="artist" src="../img/sabrina-carpenter.jpg" alt="img-de-sabrina-carpenter">
-                </div>
+    <section class="home">
+        <h1>Artists</h1>
+        <div class="grid-artist"> 
+            <img class="artist" src="../img/lali.jpg" alt="img-de-lali-esposito">
+            <img class="artist" src="../img/shawn.jpg" alt="img-de-shawn-mendes" >
+            <img class="artist" src="../img/abel-pintos.jpg"  alt="img-de-abel-pintos">
+            <img class="artist" src="../img/ariana.jpg" alt="img-de-ariana-grande" >
+            <img class="artist" src="../img/ed-sheeran.jpg"  alt="img-de-ed-sheeran">
+            <img class="artist" src="../img/laura-marano.jpg" alt="img-de-laura-marano" >
+            <img class="artist" src="../img/miley.cyrus.jpg" alt="img-de-miley-cyrus" >
+            <img class="artist" src="../img/francesco-parrino.jpg" alt="img-de-francesco-parrino">
+            <img class="artist" src="../img/ross-linch.jpg" alt="img-de-ross-linch" >
+            <img class="artist" src="../img/justin.jpg" alt="img-de--justin-bieber" >
+            <img class="artist" src="../img/axel.jpg" alt="img-de-axel">
+            <img class="artist" src="../img/sabrina-carpenter.jpg" alt="img-de-sabrina-carpenter">
+            </div>
         <h2>Albums</h2>
         <div class="grid-albums">
-            <div class="one-direction">
+            <div class="album">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6cunQQ7YZisYOoiFu2ywIq?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="twice">
+            <div class="album">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5K50GHH7OqxKavKoYb7aJm?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="carpenter">
+            <div class="album">
                 <iframe  style="border-radius:12px" src="https://open.spotify.com/embed/album/55huyEjfSVsk9nnmmKp5df?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="r5">
+            <div class="album">
                 <iframe  style="border-radius:12px" src="https://open.spotify.com/embed/album/4lzeutaiLSyo7ROvG2Hcdj?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
         </div>
 
         <h2 >Podcasts</h2>
         <div class="grid-podcast">
-            <div class="ids">
+            <div class="podcast">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/5XZmXTd8RPIdobfjMGrksu?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="itiel">
+            <div class="podcast">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/7m7kDZMMyoym9HWj26uboL?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="agape">
+            <div class="podcast">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/3lKs9D5qGucPlNMaGsxVBd?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="alex">
+            <div class="podcast">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/2iU3y9MJhZOsdS7evqsmLp?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
         </div>
 
         <h2 >Mix</h2>
         <div class="grid-mix">
-            <div class="daily-mix-1">
+            <div class="mix">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E39AJKUtp6ULn?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="daily-mix-2">
+            <div class="mix">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E36ORsEVal5fW?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="daily-mix-3">
+            <div class="mix">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2tWsGlCpi3L9nmQPjRwBKm?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="mix-country">
+            <div class="mix">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EQmPV0vrce2QZ?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="mix-pop">
+            <div class="mix">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EQncLwOalG3K7?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="mix-latino">
+            <div class="mix">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EIV9Bo4q1Athv?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="mix-melanco">
+            <div class="mix">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EVKuMoAJjoTIw?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="mix-90">
+            <div class="mix">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EQn2GRFTFMl2A?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
         </div>
