--- a/pages/playlist.html
+++ b/pages/playlist.html
@@ -42,7 +42,7 @@
                         </ul>
                         <form class="d-flex">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
+                            <button class="search btn btn-outline-success" type="submit">Search</button>
                         </form>
                         </div>
                     </div>
@@ -51,27 +51,27 @@
         </header>
 
 
-        <h1  class="h1" >Playlist</h1>
+        <h1 class="h1">Playlist</h1>
 
-        <main class="container-playlist" >
+        <main>
             <div class="grid-playlist">
                 <div class="playlist">
-                <iframe  style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWUYPasrIWf5j?utm_source=generator" width="75%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWUYPasrIWf5j?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 </div>
                 <div class="playlist">
-                    <iframe  style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX1N4LABjaIvi?utm_source=generator" width="75%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                    <iframe  style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX1N4LABjaIvi?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 </div>
                 <div class="playlist">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/54idxgtTnt7uEERuGN0nWc?utm_source=generator" width="75%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/54idxgtTnt7uEERuGN0nWc?utm_source=generator" width="250" height="380"  frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 </div>
                 <div class="playlist">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWXTdx4nYEjeS?utm_source=generator" width="75%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWXTdx4nYEjeS?utm_source=generator"width="250" height="380"  frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 </div>
                 <div class="playlist">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5FLrl3HbdKhmqRMXQLOtv8?utm_source=generator" width="75%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5FLrl3HbdKhmqRMXQLOtv8?utm_source=generator"width="250" height="380"  frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 </div>
                 <div class="playlist">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX9oegrjMzKDW?utm_source=generator" width="75%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX9oegrjMzKDW?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 </div>
             </div>
         </main>
