--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name="keywords" content="MUSICA, ALBUMS, BANDAS, ARTISTAS">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/icono-album.png">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/cc89456e6d.js" crossorigin="anonymous"></script>
-    <title>PentaMusic-inicio</title>
+    <title>PentaMusic</title>
 </head>
 <body class="bg-image">
     <header>
@@ -41,7 +42,7 @@
                     </ul>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <button class="search btn btn-outline-success" type="submit">Search</button>
                     </form>
                     </div>
                 </div>
