--- a/pages/home.html
+++ b/pages/home.html
@@ -70,31 +70,31 @@
     <section class="home">
         <h1>Artists</h1>
         <div class="grid-artist"> 
-            <img class="artist" src="../img/lali.jpg" alt="img-de-lali-esposito">
-            <img class="artist" src="../img/shawn.jpg" alt="img-de-shawn-mendes" >
-            <img class="artist" src="../img/abel-pintos.jpg"  alt="img-de-abel-pintos">
-            <img class="artist" src="../img/ariana.jpg" alt="img-de-ariana-grande" >
-            <img class="artist" src="../img/ed-sheeran.jpg"  alt="img-de-ed-sheeran">
-            <img class="artist" src="../img/laura-marano.jpg" alt="img-de-laura-marano" >
-            <img class="artist" src="../img/miley.cyrus.jpg" alt="img-de-miley-cyrus" >
-            <img class="artist" src="../img/francesco-parrino.jpg" alt="img-de-francesco-parrino">
-            <img class="artist" src="../img/ross-linch.jpg" alt="img-de-ross-linch" >
-            <img class="artist" src="../img/justin.jpg" alt="img-de--justin-bieber" >
-            <img class="artist" src="../img/axel.jpg" alt="img-de-axel">
-            <img class="artist" src="../img/sabrina-carpenter.jpg" alt="img-de-sabrina-carpenter">
+            <img class="artist musica" src="../img/lali.jpg" alt="img-de-lali-esposito">
+            <img class="artist musica" src="../img/shawn.jpg" alt="img-de-shawn-mendes" >
+            <img class="artist musica" src="../img/abel-pintos.jpg"  alt="img-de-abel-pintos">
+            <img class="artist musica" src="../img/ariana.jpg" alt="img-de-ariana-grande" >
+            <img class="artist musica" src="../img/ed-sheeran.jpg"  alt="img-de-ed-sheeran">
+            <img class="artist musica" src="../img/laura-marano.jpg" alt="img-de-laura-marano" >
+            <img class="artist musica" src="../img/miley.cyrus.jpg" alt="img-de-miley-cyrus" >
+            <img class="artist musica" src="../img/francesco-parrino.jpg" alt="img-de-francesco-parrino">
+            <img class="artist musica" src="../img/ross-linch.jpg" alt="img-de-ross-linch" >
+            <img class="artist musica" src="../img/justin.jpg" alt="img-de--justin-bieber" >
+            <img class="artist musica" src="../img/axel.jpg" alt="img-de-axel">
+            <img class="artist musica" src="../img/sabrina-carpenter.jpg" alt="img-de-sabrina-carpenter">
             </div>
-        <h2>Albums</h2>
+        <h2 >Albums</h2>
         <div class="grid-albums">
-            <div class="album">
+            <div class="album musica">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6cunQQ7YZisYOoiFu2ywIq?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="album">
+            <div class="album musica">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5K50GHH7OqxKavKoYb7aJm?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="album">
+            <div class="album musica">
                 <iframe  style="border-radius:12px" src="https://open.spotify.com/embed/album/55huyEjfSVsk9nnmmKp5df?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="album">
+            <div class="album musica">
                 <iframe  style="border-radius:12px" src="https://open.spotify.com/embed/album/4lzeutaiLSyo7ROvG2Hcdj?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
         </div>
@@ -117,28 +117,28 @@
 
         <h2 >Mix</h2>
         <div class="grid-mix">
-            <div class="mix">
+            <div class="mix musica">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E39AJKUtp6ULn?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="mix">
+            <div class="mix musica">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E36ORsEVal5fW?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="mix">
+            <div class="mix musica">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2tWsGlCpi3L9nmQPjRwBKm?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="mix">
+            <div class="mix musica">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EQmPV0vrce2QZ?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="mix">
+            <div class="mix musica">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EQncLwOalG3K7?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="mix">
+            <div class="mix musica">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EIV9Bo4q1Athv?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="mix">
+            <div class="mix musica">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EVKuMoAJjoTIw?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
-            <div class="mix">
+            <div class="mix musica">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EQn2GRFTFMl2A?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
         </div>
