--- a/pages/login.html
+++ b/pages/login.html
@@ -51,7 +51,7 @@
         </header>
 
 
-        <main class="login">
+        <main class="login contenedor">
             <img class="img-login" src="../img/foto-login.jpg" alt="foto-login">
             <div class="ingresar">
                 <form class="formulario">
